<resources>
    <string name="app_name">Delish Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="popular_items">Popular items</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="random_meal">Random meal</string>
    <string name="area">Area :</string>
    <string name="instructions">Instructions :</string>
    <string name="click_to_view">Click to view</string>
    <string name="search_meals">Search Meals...</string>
    <string name="favourite_meal_is_empty">Favourite Meal is empty. Add Favorite Meal</string>
</resources>