<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_home"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loading_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/loading_gif"
        android:visibility="gone"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/home"
            android:fontFamily="@font/myfont"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"/>

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_would_like_to_eat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myfont"
        android:text="@string/what_would_you_like_to_eat"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linear_header"
        app:layout_constraintTop_toBottomOf="@id/linear_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_random_meal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_eat">

        <ImageView
            android:id="@+id/img_random_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/accent"
            android:contentDescription="@string/random_meal" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_pup_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/myfont"
        android:text="@string/popular_items"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_would_like_to_eat"
        app:layout_constraintTop_toBottomOf="@id/cv_random_meal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_meals_popular"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pup_items"/>

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myfont"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/rv_meals_popular"
        app:layout_constraintTop_toBottomOf="@id/rv_meals_popular" />

    <androidx.cardview.widget.CardView
        android:id="@+id/category_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:elevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scrollbars="none" />
    </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>