<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:backgroundTint="@color/g_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal name">

            <ImageView
                android:id="@+id/img_meal_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddToFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:backgroundTint="@color/accent"
        android:contentDescription="@string/favorites"
        app:tint="@color/white"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/_10sdp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_meal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_categoryInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:text="@string/category"
                    android:textColor="@color/g_black"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_category" />

                <TextView
                    android:id="@+id/tv_areaInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:text="@string/area"
                    android:textColor="@color/g_black"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_area" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myfont"
                android:includeFontPadding="false"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_meal_info" />

            <TextView
                android:id="@+id/tv_instructions_steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/tv_instructions"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/img_youtube"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_youtube"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>